Spritesheet: correction iPhone retina
Alignement pour les questions résolues

--- a/ui/sass/components/card_max640.scss
+++ b/ui/sass/components/card_max640.scss
@@ -26,7 +26,7 @@
 	&.solved {
 		header {
 			h2 {
-				background-position-y: 6px;
+				background-position-y: -30px;
 			}
 		}
 		opacity: 1;
